# ultimate-prompt

./: .gitignore  COORDINATOR_INSTRUCTIONS.md  GENERATOR_INSTRUCTIONS.md  TODO.md  ULTIMATE_PROMPT_INSTRUCTIONS.md
benchmarks/: ripgrep.md
benchmarks/black/: setup_instructions.md
benchmarks/black/iteration_0/: INFO.txt  prompt.md  prompt_clean.md
benchmarks/black/iteration_0_old/: INFO.txt  prompt.md
benchmarks/black/tests/: test_equivalence.py
benchmarks/ripgrep/: LEARNINGS.md
benchmarks/ripgrep/iteration_0/: INFO.txt  prompt.md
benchmarks/ripgrep/iteration_0/implementation/: Cargo.toml  cargo.toml
benchmarks/ripgrep/iteration_0/implementation/crates/globset/: Cargo.toml
benchmarks/ripgrep/iteration_0/implementation/crates/globset/src/: lib.rs
benchmarks/ripgrep/iteration_0/implementation/crates/grep-cli/: Cargo.toml
benchmarks/ripgrep/iteration_0/implementation/crates/grep-cli/src/: lib.rs
benchmarks/ripgrep/iteration_0/implementation/crates/grep-matcher/: Cargo.toml
benchmarks/ripgrep/iteration_0/implementation/crates/grep-matcher/src/: lib.rs
benchmarks/ripgrep/iteration_0/implementation/crates/grep-printer/: Cargo.toml
benchmarks/ripgrep/iteration_0/implementation/crates/grep-printer/src/: lib.rs
benchmarks/ripgrep/iteration_0/implementation/crates/grep-regex/: Cargo.toml
benchmarks/ripgrep/iteration_0/implementation/crates/grep-regex/src/: lib.rs
benchmarks/ripgrep/iteration_0/implementation/crates/grep-searcher/: Cargo.toml
benchmarks/ripgrep/iteration_0/implementation/crates/grep-searcher/src/: lib.rs
benchmarks/ripgrep/iteration_0/implementation/crates/ignore/: Cargo.toml
benchmarks/ripgrep/iteration_0/implementation/crates/ignore/src/: lib.rs
benchmarks/ripgrep/iteration_0/implementation/src/: args.rs  logger.rs  main.rs  search.rs
benchmarks/ripgrep/iteration_0/implementation_contaminated/src/: main.rs
benchmarks/ripgrep/tests/: run_tests.sh
instructions/: COORDINATOR_INSTRUCTIONS.md  GENERATOR_INSTRUCTIONS.md  LEARNINGS.md  ORCHESTRATOR_INSTRUCTIONS.md  PROMPT_AUTHOR_INSTRUCTIONS.md  PROMPT_REFINER_INSTRUCTIONS.md  ULTIMATE_PROMPT_INSTRUCTIONS.md  VERIFIER_CRITIC_INSTRUCTIONS.md
